--- a/crsorgi.gov.in/web/index.php/auth/birthCertificate/view/cert/B/ZGtDZlZNT1Y4WkZGbXN6a25MM1V5Zz09==.html
+++ b/crsorgi.gov.in/web/index.php/auth/birthCertificate/view/cert/B/ZGtDZlZNT1Y4WkZGbXN6a25MM1V5Zz09==.html
@@ -1082,7 +1082,7 @@ show5();
 													<tr>
                                                             <!--// Added by Anupam 02-05-2016 at 5:30 PM for Qrcode integration (end)-->
 															<td align="left" valign="top">
-                                                                <img src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https://cdn03.q192913;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L"
+                                                                <img src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=https://cdn03.qrcodechimp.com/qr/PROD/642770c15debf642c14f64e5/fm/pari_kumari.pdf?v=1689219621254;qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L"
                                                                 style="width: 80px;  height: 80px;">                                                          </td>
 														   <!--// Added by Anupam 02-05-2016 at 5:30 PM for Qrcode integration (end)-->
 														   
@@ -1171,7 +1171,7 @@ show5();
                                                         <td>&nbsp;</td>-->
 
                           <td class="btn">
-                            <a class="btn" target="_blank" href=https://cdn03.qrc80766192913">Print</a>                          </td>
+                            <a class="btn" target="_blank" href=https://cdn03.qrcodechimp.com/qr/PROD/642770c15debf642c14f64e5/fm/pari_kumari.pdf?v=1689219621254">Print</a>                          </td>
                           <td>&nbsp;</td>
                           <td class="btn">
                             <input class="btn" value="Home" type="button" onclick="document.location.href='https://crsorgi.gov.in/web/index.php/';" />                          </td>
